@@ -47,6 +47,9 @@ Trunk (unreleased changes)
     HADOOP-5668. Change TotalOrderPartitioner to use new API. (Amareshwari
     Sriramadasu via cdouglas)
 
+    HADOOP-5738. Split "waiting_tasks" JobTracker metric into waiting maps and
+    waiting reduces. (Sreekanth Ramakrishnan via cdouglas)
+
   NEW FEATURES
 
     HADOOP-4268. Change fsck to use ClientProtocol methods so that the
